# pelican-testing

./: CNAME  Makefile  archives.html  authors.html  bad-disinformation.html  bad-disnformation.html  categories.html  good-pets.html  index.html  pelicanconf.py  pointless-noninformation.html  pyproject.toml  tags.html  tasks  urgent-information.html
.github/workflows/: main.yml
author/: informatron.html
category/: disinformation.html  information.html  noninformation.html  pets.html
content/: bad-disinformation.md  good-pets.md  pointless-noninformation.md  urgent-information.md
content/pages/: about.md  contact.md
feeds/: all.atom.xml  disinformation.atom.xml  information.atom.xml  noninformation.atom.xml  pets.atom.xml
pages/: about-information-campaing.html  about.html  contact.html
tag/: have.html  pets.html  tags.html  we.html
templates/: contact.html
